Proyecto de primer parcial

--- a/Project/html/contactos.html
+++ b/Project/html/contactos.html
@@ -7,7 +7,6 @@
 </head>
 <body style="margin: 0; font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'">
 <!--	Barra de navegacion-->
-<!--
 	<div id="navbar" style="background-color: #e05306; margin: auto; height: 80px; width: 100%" align="center">
 	  <table width="100%" border="0" align="center" style="color: aliceblue">
 	    <tbody>
@@ -21,7 +20,6 @@
         </tbody>
       </table>
 	</div>
--->
 <!--	Form-->
 	<div id="form" style="background-image: url('../img/contact-bg.png'); margin: auto; height: 750px" align="center">
 		<br>
@@ -34,35 +32,25 @@
       <input type="text" name="name" id="name" pattern="([A-Z][a-z]{1,10})+\s+([A-Z][a-z]{1,10})+\s+([A-Z][a-z]{1,10})+\s+([A-Z][a-z]{1,10})" placeholder="Ingrese su nombre completo" autofocus required>	
     </p>
 	  <p>
-      <label for="direccion">Direccion:</label>
-      <input type="text" name="direccion" id="direccion" placeholder="Ingrese su nombre completo" autofocus required>	
-    </p>
-	  <p>
       <label for="email">Email:</label>
       <input type="email" name="email" id="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" placeholder="ejemplo@email.com" >	
     </p>	
-<!--
 	  <p>
       <label for="url">URL:</label>
       <input type="url" name="url" id="url" pattern="https?://.+[a-zA-Z0-9]+\.+[a-zA-Z0-9]+" placeholder="Escribe la URL de tu página web personal" >	
     </p>
--->
     <p>
       <label for="date">Fecha de Nacimiento:</label>
       <input type="date" name="date" id="date" max="2017-01-01" min="2000-01-01">	
     </p>
-<!--
 	  <p>
       <label for="datetime">Fecha y Hora Local:</label>
       <input type="datetime-local" name="datetime" id="datetime">	
     </p>
--->
-<!--
 	  <p>
 	    <label for="sueldo">Sueldo:</label>
         <input type="text" name="sueldo" id="sueldo" pattern="^(?:[1-9]\d{0,2}|5000)(?:\.\d{1,2})?$">
 	  </p>
--->
 	  <p>
 	    <label for="phone">Telefono:</label>
         <input type="tel" name="phone" id="phone" pattern="[0-9]{1,10}" placeholder="0987654321">
@@ -70,14 +58,6 @@
 	  <p>
 	    <label for="color">Color Favorito:</label>
         <input type="color" name="color" id="color">
-	  </p>
-	  <p>
-	    <label for="servicio">Servicio Requerido:</label>
-		  <select>
-		    <option value="1">Fumigacion Exteriores</option>
-		    <option value="2">Fumigacion Interiores</option>
-		    <option value="3">Fumigacion Corporativa</option>
-		  </select>
 	  </p>
   </fieldset>
 	<fieldset style="width: 50%; margin: auto; color: white;  font-size: 20px; padding: 20px">
@@ -104,14 +84,12 @@
 		
 	</div>
 <!--	Pie de Página-->
-<!--	<div id="footer" style="background-image: url('../img/footer1.png');background-size: cover; margin: auto; height: 400px" align="center">-->
+	<div id="footer" style="background-image: url('../img/footer1.png');background-size: cover; margin: auto; height: 400px" align="center">
 <!--		<img src="../img/footer1.png" width="100%">-->
-<!--	</div>-->
+	</div>
 <!--Copyright footer-->
-<!--
 <div class="copyright" id="copyright" style="text-align: center; height: 100px; background-color: #e05306; color: white">
 	<h3 style="margin: auto; padding: 40px">Copyright 2023 All Right Reserved By Cristian Tello - catello2@espe.edu.ec</h3>
 </div>
--->
 </body>
 </html>
