--- a/Project/html/servicios.html
+++ b/Project/html/servicios.html
@@ -7,7 +7,6 @@
 </head>
 <body style="margin: 0; font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'">
 <!--	Barra de navegacion-->
-<!--
 	<div id="navbar" style="background-color: #e05306; margin: auto; height: 80px; width: 100%" align="center">
 	  <table width="100%" border="0" align="center" style="color: aliceblue">
 	    <tbody>
@@ -21,7 +20,6 @@
         </tbody>
       </table>
 	</div>
--->
 <!--	Servicios-->
 <div id="nosotros" style="background-color: white; margin: auto; height: 700px; " align="center">
 		<h1>Nuestros Servicios</h1>
@@ -31,15 +29,15 @@
 	    <tbody>
 	      <tr>
 	        <td width="33%" align="center" valign="top"><p><img src="../img/img-1.png" width="410" height="410" alt=""/></p>
-	          <h3>FUMIGACION INTERNA</h3>
+	          <h3>DISEÑO DE ARQUITEECTURA</h3>
 	          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, non.</p>
 				
 			  </td>
 	        <td width="33%" align="center" valign="top"><p><img src="../img/img-2.png" width="374" height="402" alt=""/></p>
-            <h3>FUMIGACION EXTERNA</h3>
+            <h3>SERVICIOS DE CONSTRUCCIÓN</h3>
 		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, non.</p></td>
 	        <td width="33%" align="center" valign="top"><p><img src="../img/img-3.png" width="408" height="408" alt=""/></p>
-	          <h3>FUMIGACION CORPORATIVA</h3>
+	          <h3>SISTEMAS ELÉCTRICOS</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, non.</p></td>
           </tr>
         </tbody>
@@ -51,14 +49,12 @@
 	<marquee><h1 style="font-size: 40px; padding: 20px; margin: auto">Conoce todos los beneficios que ofrecemos para tu negocio</h1></marquee>
 	</div>
 <!--	Pie de Página-->
-<!--	<div id="footer" style="background-image: url('../img/footer1.png');background-size: cover; margin: auto; height: 400px" align="center">-->
+	<div id="footer" style="background-image: url('../img/footer1.png');background-size: cover; margin: auto; height: 400px" align="center">
 <!--		<img src="../img/footer1.png" width="100%">-->
-<!--	</div>-->
+	</div>
 <!--Copyright footer-->
-<!--
 <div class="copyright" id="copyright" style="text-align: center; height: 100px; background-color: #e05306; color: white">
 	<h3 style="margin: auto; padding: 40px">Copyright 2023 All Right Reserved By Cristian Tello - catello2@espe.edu.ec</h3>
 </div>
--->
 </body>
 </html>
